Set the width of the scrollbar a bit wider to prevent accidental selection of images instead of desired scrolling.

--- a/styles/scrollbar.css
+++ b/styles/scrollbar.css
@@ -1,7 +1,7 @@
 /* -------------------------------------------------- */
 /* Scrollbar ---------------------------------------- */
 .gallery-widget ::-webkit-scrollbar {
-    width: 6px;
+    width: 8px;
 }
 /* Track */
 .gallery-widget ::-webkit-scrollbar-track {
